update jwt