@@ -1,6 +1,7 @@
 package LosGuerreros.APIGateway;
 
 import com.netflix.discovery.EurekaClient;
+import com.netflix.discovery.shared.Application;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -21,7 +22,6 @@ public class ServiceDiscoveryController {
     @GetMapping("/services")
     public List<String> getAllServices() {
         return eurekaClient.getApplications().getRegisteredApplications().stream()
-                .map(application -> application.getName())
-                .collect(Collectors.toList());
+                .map(Application::getName).toList();
     }
 }
